--- a/kMM_ApplicationControll/CMakelists.txt
+++ b/kMM_ApplicationControll/CMakelists.txt
@@ -4,12 +4,10 @@ project(kMM_controller)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/../build-kMM_ApplicatonControll)
+set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR} build)
 
-add_executable(${PROJECT_SOURCE_DIR}/sources/main.cpp)
+add_executable(build main.cpp)
 
 include_directories(headers)
 
 file(GLOB SOURCES source/*.cpp)
-
-target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
